gccida/c0/combinable_i3pat
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combinable_i3pat/src/combine.c:1793:13: error: expected identifier or '('
 struct set = expand_field_assignment( x); 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combinable_i3pat/src/combine.c:1795:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
src = (  struct rtx_def *)set[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combinable_i3pat/src/combine.c:1815:57: error: use of undeclared identifier 'machine_mode'
|| ix86_hard_regno_mode_ok( inner_dest->fld[0].rtint, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)inner_dest))) 
                                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combinable_i3pat/src/combine.c:1815:72: error: expected expression
|| ix86_hard_regno_mode_ok( inner_dest->fld[0].rtint, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)inner_dest))) 
                                                                       ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combinable_i3pat/src/obj/combine.o] Error 1
